[package]
name = "serde-edit"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
cursive = "0.16.3"
cursive_tree_view = "0.7.0"
derivative = "2.2.0"
serde = { version = "1.0.125", features = ["derive"] }
serde-reflection = "0.3.2"
